--- a/index.html
+++ b/index.html
@@ -13,53 +13,102 @@
       <header>
          <h1>Barrett Flowers</h1>
          <p>
-            Project Development Manager at <a href="https://indyhost.net/">Indyhost.net Inc.</a>
+            DevOps Engineer / Product Manager at <a href="https://indyhost.net/">Indyhost.net Inc.</a>
          </p>
-         </p>Greater Indianapolis Area | <a href="https://barrettjflowers.net/business-contact/">Contact</a></p>
+         </p>📍 Greater Indianapolis Area | <a href="https://barrettjflowers.net/business-contact/">Contact</a></p>
          <p>DevOps Engineer | Web Developer | Photographer</p>
       </header>
       <section>
-         <p>A junior developer with a thirst for knowledge- and pumpkin lattes. Retro games, tv shows, books, and
-            films.
-            As a creative, unix nerd, and devops aficionado. I LOVE simple applications that optimize and simplify
-            workflows.
+         <p>A junior developer with a hunger for knowledge!
+            As a creative, unix nerd, and devops aficionado;
+            I love simple applications that optimize and simplify
+            workflows. I enjoy- and prefer in person work,
+            but am also comfortable working remotely.
+            I am a self-starter and problem-solver with a passion
+            for learning and a desire to grow in the tech industry.
 
-            Problem solving with other team members is enjoyable, exciting, and fulfilling. Researching solutions to
-            difficult or otherwise unique problems is hard to beat!</p>
+            Problem solving with other team members is enjoyable,
+            exciting, and fulfilling. I believe that comradary is
+            an integral part of the creative and problem solving process.
+            Engineering solutions to difficult or otherwise unique problems is hard to beat!</p>
       </section>
       <section>
          <h2>Real World</h2>
          <ul>
             <h3>Indyhost.net Inc.</h3>
+            <p>Indianapolis, IN</p>
             <p>2021 - Present</p>
-            <p>Growing learning scripts to automate testing. Bots, installers, scripts and all things unix. Bugfixes in
-               chrome exntesions,
-               wordpress configuration, work on JVM-based credit card terminal proxy. Server management, and more.
+            <p>
+               As a PM I am experienced in developing scripts to automate quality
+               assurance. I love to create bots, and other *nix-based automation
+               tools based on the teams needs. Generally skilled in building and debugging Chrome extensions,
+               configuring WordPress environments. I have also helped continue development on
+               a JVM-based credit-card terminal proxy.
+               Proficient in server management, system administration,
+               and optimizing workflows for improved efficiency.
             </p>
+            <li>DevOps Engineer</li>
+            <li>Quality Assurance</li>
+            <h3>Artisan Photography</h3>
+            <p>2017 - Present</p>
+            <p>Several events, proms, meetings. Family photos and senior photos.
+               Today I mainly stick to what I would call the artisan side of photography.
+               Authentic and real moments, beautiful landscapes and even film photography.
+               Open to work, contact me for prints.
+            </p>
+            <a href="https://barrettjflowers.net/work/">My portfolio.</a>
          </ul>
       </section>
       <section>
          <h2>Education</h2>
          <ul>
             <h3>Purdue Polytechnic</h3>
-            <p>2 Years</p>
+            <p>2019 - 2021</p>
             <li>CNIT 15500</li>
             <li>CNIT 27200</li>
             <li>OLS 27400</li>
             <h3>Courses and Certifications</h3>
-            <li>https://www.coursera.org/account/accomplishments/verify/LJYM8J43ZHJS</li>
-            <li>https://www.coursera.org/account/accomplishments/verify/MZV3ZDUR6XR9</li>
+            <li> <a href="https://www.coursera.org/account/accomplishments/verify/LJYM8J43ZHJS">Crash Course on Python
+               </a></li>
+            <li><a href="https://www.coursera.org/account/accomplishments/verify/MZV3ZDUR6XR9">Technical Support
+                  Fundamentals</a></li>
          </ul>
       </section>
       <section>
-         <h2>Projects</h2>
+         <h2>Languages and Technologies</h2>
+         <p>In order of proficiency descending.</p>
          <ul>
-            <li><a href="somegithublink">Gravesite Locator Capstone Project</a></li>
-            <li><a href="somegithublink">Dragonfly</a></li>
-            <li><a href="somegithublink">Package Installer</a></li>
-            <li><a href="somegithublink">Lewis-and-Clark</a></li>
+            <li>Bash</li>
+            <li>Python, Pygame</li>
+            <li>Docker</li>
+            <li>Git</li>
+            <li>HTML, CSS</li>
+            <li>JavaScript, React</li>
+            <li>Java, Javafx</li>
+            <li>Rust, Leptos and Axum</li>
+      </section>
+      <section>
+         <h2>Fun Projects</h2>
+         <ul>
+            <li><a href="https://github.com/barrettjflowers/gravesite-locator">Gravesite Locator for CNIT 27200</a></li>
+            <li><a href="https://github.com/barrettjflowers/dragonfly">Dragonfly</a></li>
+            <li><a href="https://indyhost.net/indygateway/">IndyGateway Software Installer</a></li>
+            <li><a href="https://github.com/barrettjflowers/lewis-and-clark-legacy">Lewis-and-Clark</a></li>
          </ul>
       </section>
+      <section>
+         <h3>References</h3>
+         <p>Available upon request.</p>
+      </section>
+      <section>
+         <h3>Some of my Favorite Quotes.</h3>
+         <p>"You got the makings of greatness in you, but you gotta take the helm and chart your own course! Stick to
+            it, no matter the squalls! And when the time comes, you'll get the chance to really test the cut of your
+            sails and show what you're made of! And... well, I hope I'm there, catching some of the light coming off you
+            that day." - John Silver, Treasure Planet</p>
+         <p>"Not all those who wander are lost." - J.R. Tolkien</p>
+         <p>"The only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't
+            settle." - Steve Jobs</p>
    </div>
 </body>
 <footer>
