--- a/index.html
+++ b/index.html
@@ -12,55 +12,46 @@
    <div id="resume">
       <header>
          <h1>Barrett Flowers</h1>
-         <p>
-            DevOps Engineer / Product Manager at <a href="https://indyhost.net/">Indyhost.net Inc.</a>
+         <p> Software Development | Tech Team | Help Desk at <a href="https://indyhost.net/">Indyhost.net Inc.</a>
+		 <p>✈ Greater Indianapolis Area › barrettjflowers@gmail.com</p>
          </p>
-         </p>📍 Greater Indianapolis Area | <a href="https://barrettjflowers.net/business-contact/">Contact</a></p>
-         <p>DevOps Engineer | Web Developer | Photographer</p>
       </header>
       <section>
-         <p>A junior developer with a hunger for knowledge!
+         <p>I am in my element when doing research and finding
+            creative solutions to problems.
             As a creative, unix nerd, and devops aficionado;
             I love simple applications that optimize and simplify
-            workflows. I enjoy- and prefer in person work,
-            but am also comfortable working remotely.
-            I am a self-starter and problem-solver with a passion
-            for learning and a desire to grow in the tech industry.
-
-            Problem solving with other team members is enjoyable,
-            exciting, and fulfilling. I believe that comradary is
-            an integral part of the creative and problem solving process.
-            Engineering solutions to difficult or otherwise unique problems is hard to beat!</p>
+            workflows. Also vim enthusiast :)
+            I believe that comradary is an integral part of the creative and problem solving process.
+         </p>
       </section>
       <section>
-         <h2>Real World</h2>
+         <h2>→ work experience</h2>
          <ul>
             <h3>Indyhost.net Inc.</h3>
             <p>Indianapolis, IN</p>
             <p>2021 - Present</p>
             <p>
-               As a PM I am experienced in developing scripts to automate quality
-               assurance. I love to create bots, and other *nix-based automation
-               tools based on the teams needs. Generally skilled in building and debugging Chrome extensions,
-               configuring WordPress environments. I have also helped continue development on
-               a JVM-based credit-card terminal proxy.
-               Proficient in server management, system administration,
-               and optimizing workflows for improved efficiency.
+               *nix-based automation scripting tools based on the teams needs.
+			   Experience in building and debugging Chrome extensions.
+               Migrating multiple servers and configuring WordPress environments.
+               Developing a JVM-based credit-card terminal proxy.
             </p>
-            <li>DevOps Engineer</li>
+            <li>Software Development</li>
             <li>Quality Assurance</li>
-            <h3>Artisan Photography</h3>
+            <li>Help Desk</li>
+            <h3>Barrett Flowers Freelance Photography</h3>
             <p>2017 - Present</p>
             <p>Several events, proms, meetings. Family photos and senior photos.
                Today I mainly stick to what I would call the artisan side of photography.
                Authentic and real moments, beautiful landscapes and even film photography.
                Open to work, contact me for prints.
             </p>
-            <a href="https://barrettjflowers.net/work/">My portfolio.</a>
+			<li><a href="https://barrettjflowers.net/work/">Portfolio</a>
          </ul>
       </section>
       <section>
-         <h2>Education</h2>
+         <h2>→ education</h2>
          <ul>
             <h3>Purdue Polytechnic</h3>
             <p>2019 - 2021</p>
@@ -75,49 +66,45 @@
          </ul>
       </section>
       <section>
-         <h2>Languages and Technologies</h2>
-         <p>In order of proficiency descending.</p>
+         <h2>→ skills</h2>
          <ul>
             <li>Bash</li>
+            <li>JavaScript, React, Svelte</li>
             <li>Python, Pygame</li>
             <li>Docker</li>
             <li>Git</li>
-            <li>HTML, CSS</li>
-            <li>JavaScript, React</li>
             <li>Java, Javafx</li>
             <li>Rust, Leptos and Axum</li>
       </section>
       <section>
-         <h2>Fun Projects</h2>
+         <h2>→ projects</h2>
          <ul>
+            <li><a href="https://github.com/barrettjflowers/bookzf">Bookzf</a></li>
             <li><a href="https://github.com/barrettjflowers/gravesite-locator">Gravesite Locator for CNIT 27200</a></li>
             <li><a href="https://github.com/barrettjflowers/dragonfly">Dragonfly</a></li>
+			<li><a href="https://www.youtube.com/watch?v=nFdbLP1-OHc">take a moment to breathe.</a></li>
             <li><a href="https://indyhost.net/indygateway/">IndyGateway Software Installer</a></li>
-            <li><a href="https://github.com/barrettjflowers/lewis-and-clark-legacy">Lewis-and-Clark</a></li>
+            <li><a href="https://indyhost.net/indygateway/">IndyGateway Pax Connector</a></li>
          </ul>
       </section>
-      <section>
-         <h3>References</h3>
-         <p>Available upon request.</p>
-      </section>
-      <section>
-         <h3>Some of my Favorite Quotes.</h3>
+	  <section>
+         <h2>→ references</h3>
+         <p>Michael Heien › (402) 679-4677 | Coworker, mentor and friend.</p> 
+         <p>Luke Lechel › (260) 710-0864 | Colleague, friend.</p> 
+		 <br>
+	  </section>
          <p>"You got the makings of greatness in you, but you gotta take the helm and chart your own course! Stick to
             it, no matter the squalls! And when the time comes, you'll get the chance to really test the cut of your
             sails and show what you're made of! And... well, I hope I'm there, catching some of the light coming off you
             that day." - John Silver, Treasure Planet</p>
-         <p>"Not all those who wander are lost." - J.R. Tolkien</p>
-         <p>"The only way to do great work is to love what you do. If you haven't found it yet, keep looking. Don't
-            settle." - Steve Jobs</p>
-   </div>
-</body>
 <footer>
    <p><a href="https://barrettjflowers.net">barrettjflowers.net</a> <a
          href="https://github.com/barrettjflowers/">github.com/barrettjflowers </a>
       <a href="https://www.linkedin.com/in/barrettjflowers/">linkedin.com/in/barrettjflowers </a>
       </a>
-
    </p>
 </footer>
+   </div>
+</body>
 
 </html>
