better intro and indyhost continuity

--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
          </p>
       </header>
       <section>
-         <p>I am in my element when doing research and finding
-            creative solutions to problems.
-            As a creative, unix nerd, and devops aficionado;
-            I love simple applications that optimize and simplify
-            workflows. Also vim enthusiast :)
-            I believe that comradary is an integral part of the creative and problem solving process.
-         </p>
+		 <p>
+		 Systems-focused developer who thrives on creative problem-solving,
+		 building simple and reliable tools, and participating in team camaraderie.
+		 In my element when researching team challenges and designing streamlined
+		 solutions that optimize workflows. I believe that purposeful engineering
+		 and collaboration are integral to meaningful results.
       </section>
       <section>
          <h2>→ work experience</h2>
@@ -31,21 +30,16 @@
             <h3>Indyhost.net Inc.</h3>
             <p>Indianapolis, IN</p>
             <p>2021 - Present</p>
-            <p>
-               *nix-based automation scripting tools based on the teams needs.
-			   Experience in building and debugging Chrome extensions.
-               Migrating multiple servers and configuring WordPress environments.
-               Developing a JVM-based credit-card terminal proxy.
-            </p>
-            <li>Software Development</li>
-            <li>Quality Assurance</li>
-            <li>Help Desk</li>
+            <li>Develop *nix-based automation tools to streamline internal workflows and reduce manual processes.</li>
+            <li>Build and debug Chrome extensions supporting POS systems and dual-pricing label integrations.</li>
+            <li>Migrate and maintain local and cloud-hosted servers, including WordPress environments.</li>
+			<li>Develop and deploy JVM-based credit card terminal proxy service (IndyGateway Pax Connector).</li>
+			<li>Install and configure POS hardware and software solutions for client environments.</li>
+			<li>Provide cross-functional support spanning development, QA testing, and technical troubleshooting for clients.</li>
             <h3>Barrett Flowers Freelance Photography</h3>
             <p>2017 - Present</p>
             <p>Several events, proms, meetings. Family photos and senior photos.
-               Today I mainly stick to what I would call the artisan side of photography.
                Authentic and real moments, beautiful landscapes and even film photography.
-               Open to work, contact me for prints.
             </p>
 			<li><a href="https://barrettjflowers.net/work/">Portfolio</a>
          </ul>
@@ -69,6 +63,7 @@
          <h2>→ skills</h2>
          <ul>
             <li>Bash</li>
+            <li>Video Color Grading and Post Production</li>
             <li>JavaScript, React, Svelte</li>
             <li>Python, Pygame</li>
             <li>Docker</li>
@@ -84,6 +79,7 @@
             <li><a href="https://github.com/barrettjflowers/dragonfly">Dragonfly</a></li>
 			<li><a href="https://www.youtube.com/watch?v=nFdbLP1-OHc">take a moment to breathe.</a></li>
             <li><a href="https://indyhost.net/indygateway/">IndyGateway Software Installer</a></li>
+            <li><a href="https://indyhost.net/indygateway/">IndyGateway Device Extension</a></li>
             <li><a href="https://indyhost.net/indygateway/">IndyGateway Pax Connector</a></li>
          </ul>
       </section>
